# quartz-ctx

./: Cargo.toml  README.md  USAGE_GUIDE.md
src/: anti_patterns.rs  behavior.rs  examples.rs  helpers.rs  main.rs  mcp.rs  model.rs  parser.rs  patterns.rs  timing.rs
src/render/: context.rs  json.rs  markdown.rs  mod.rs
